animations and mobile

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html dir="ltr" lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lukas Bugla</title>
   <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet" />
   <link rel="stylesheet" href="./styles.css" />
@@ -35,7 +36,7 @@
 
     <section id="biography">
       <h2>Biography</h2>
-      <img src="img/photo.jpg" />
+      <img src="img/photo.jpg" srcset="img/photo.jog, img/photo@2x.jpg 2x, img/photo@3x.jpg 3x" />
       <div class="row">
         <div class="six columns">
           I'm not just looking to create a beautiful face for the product— I want to help to define its entire direction. My passion lies in creating great products and services.
@@ -74,6 +75,16 @@
         Each company is unique so I employ an iterative and adaptable design process.
       </p>
       <div id="process">
+        <svg xmlns="http://www.w3.org/2000/svg" width="962" height="260" viewBox="0 0 962 260">
+          <g fill="none" fill-rule="evenodd">
+              <ellipse id="ellipse0" stroke-dasharray="1000" stroke-dashoffset="1000" cx="129.013" cy="129.932" stroke="#CCC" rx="129.013" ry="126.932"/>
+              <ellipse id="ellipse1" stroke-dasharray="1000" stroke-dashoffset="1000" cx="363.013" cy="129.932" stroke="#CCC" rx="129.013" ry="126.932"/>
+              <ellipse id="ellipse2" stroke-dasharray="1000" stroke-dashoffset="1000" cx="597.013" cy="129.932" stroke="#CCC" rx="129.013" ry="126.932"/>
+              <ellipse id="ellipse3" stroke-dasharray="1000" stroke-dashoffset="1000" cx="831.013" cy="129.932" stroke="#CCC" rx="129.013" ry="126.932"/>
+              <path stroke="#CCC" stroke-linecap="square" d="M127 3h123.5M361 3h123.5M595 3h123.5M709 257h123.5M476 257h123.5M241 257h123.5"/>
+              <path fill="#CCC" d="M250.042.074v6l4.515-3zM485 0v6l4.515-3zM719 0v6l4.515-3zM710.515 260v-6L706 257zM477.515 260v-6L473 257zM242.515 260v-6L238 257z"/>
+          </g>
+        </svg>
         <div class="row center">
           <div class="heading align-center">
             1. Understand
@@ -157,6 +168,7 @@
       </div>
     </div>
   </footer>
+  <script src="./script.js"></script>
 
 </body>
 </html>
