--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lukas Bugla</title>
-  <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Barlow:400,500" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
